Nav and jumbotron on mobile homepage are now styled correctly.

--- a/less/index.less
+++ b/less/index.less
@@ -85,6 +85,7 @@ img {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    margin-left: 0px;
   }
 
   h2 {
@@ -103,6 +104,9 @@ img {
     width: 100%;
     display: flex;
     flex-direction: row;
+    margin: auto;
+    margin-bottom: -35px;
+    height: 92px;
   }
 }
 
@@ -119,6 +123,7 @@ body {
     justify-items: center; 
     width: 100%; 
     max-width: 320px; 
+    margin: 0 auto;
   }
 }
 .body-container { 
@@ -134,8 +139,7 @@ body {
     justify-items: center; 
     width: 100%; 
     max-width: 320px; 
-    margin-top: -342%;
-    margin: auto;
+    margin: 0 auto;
   }
 
 }
@@ -156,11 +160,10 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* justify-items: center; */
     width: 100%;
     max-width: 320px;
     margin: 0 auto;
-    margin-bottom: 13%
+    height: 50px;
   }
 }
 
@@ -169,14 +172,10 @@ body {
   max-width: 30px;
 
   @media @mobile {
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-between;
-    /* justify-items: center; */
-    width: 100%;
+    width: 32px;
     max-width: 320px;
     margin: auto;
-    margin-left:10%;
+    margin-left: 2px;
   }
 }
 
@@ -193,6 +192,8 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     margin: 0 auto;
+    margin-right: 164px;
+
   }
 }
 
@@ -211,9 +212,10 @@ body {
     justify-content: center;
     justify-items: center;
     width: 100%;
-    max-width: 320px; 
+    max-width: 320px;
     margin: 0 auto;
-    margin-top: -13%;
+    margin-top: -5%;
+    margin-bottom: 1%;
   }
 
 }
@@ -227,7 +229,9 @@ margin-bottom: 2%;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    max-width: 320px; 
+    max-width: 320px;
+    height: 210px;
+    margin-top: 7px;
     }
 }
 
@@ -247,12 +251,14 @@ margin-bottom: 2%;
   display: block;
 
   @media @mobile {
-        /* height: fit-content; */
-        width: 100%;
-        /* margin: 0 auto; */
-        max-width: 320px;
-        margin-top: 40%;
-        margin-left: -32%;
+    width: 10%;
+    margin: 0 auto;
+    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: -82px;
+    margin-top: 100px;
   }
 }
 
@@ -261,11 +267,12 @@ margin-bottom: 2%;
   @media @mobile {
     width: 100%;
     margin: 0 auto;
-    /* margin-bottom: -12%; */
     max-width: 320px;
-    margin-top: 39%;
-    margin-left: -36%;
+    margin-top: 10px;
+    margin-left: -34px;
     letter-spacing: 1px;
+    font-size: 35px;
+    line-height: 30px;
   }
 }
 
@@ -282,8 +289,7 @@ margin-bottom: 2%;
     justify-content: flex-start;
     justify-items: center;
     width: 100%;
-    max-width: 320px; 
-    order: 1;
+    max-width: 320px;
   }
   
 }
@@ -332,13 +338,20 @@ margin-bottom: 2%;
   margin-top: -4%; 
 
   @media @mobile {
-    width: 100%; 
-    max-width: 320px; 
-    display:flex;
+    // width: 100%; 
+    // max-width: 320px; 
+    // display:flex;
+    // flex-direction: column;
+    // justify-content: center; 
+    // justify-items: center; 
+    // background-color: #ffffff !important;
+    display: flex;
     flex-direction: column;
-    justify-content: center; 
-    justify-items: center; 
-    background-color: #ffffff !important;
+    /* justify-content: flex-start; */
+    width: 100%;
+    justify-content: center;
+    max-width: 320px;
+    justify-items: center;
     }
 
   }
